<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

  <include
      android:id="@+id/pnlStartScreen"
      layout="@layout/content_start_screen"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <include
      android:id="@+id/pnlGameScreen"
      layout="@layout/content_game_screen"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="64dp"
      android:padding="4dp"
      app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/lblDummy2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/highest_score"
        android:gravity="top|center_horizontal"
        android:text="@string/hi_score"
        android:textAppearance="@style/TextStyle" />

    <TextView
        android:id="@+id/lblDummy1"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:text="@string/score_1"
        android:textAppearance="@style/TextStyle"
        android:contentDescription="@string/score_player_one" />

    <TextView
        android:id="@+id/lblDummy3"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:text="@string/score_2"
        android:textAppearance="@style/TextStyle"
        android:contentDescription="@string/score_player_two"/>

    <TextView
        android:id="@+id/lblHighScore"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignBottom="@id/lblDummy2"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/vpLEDLabel1"
        android:layout_toStartOf="@+id/vpLEDLabel2"
        android:background="@android:color/transparent"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/place_holder_initial_score"
        android:textAppearance="@style/TextStyle"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/vpLEDLabel1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:textAppearance="@style/TextStyle"
        android:textSize="32sp"
        android:text="@string/place_holder_initial_score" />

    <TextView
        android:id="@+id/vpLEDLabel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:textAppearance="@style/TextStyle"
        android:textSize="32sp"
        android:text="@string/place_holder_initial_score" />


  </RelativeLayout>

  <com.jmedeisis.bugstick.Joystick
      android:id="@+id/joystick"
      android:layout_width="128dp"
      android:layout_height="64dp"
      android:layout_marginEnd="8dp"
      android:layout_marginBottom="8dp"
      android:background="@color/white"
      app:motion_constraint="Horizontal"
      app:force_square="false"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent">

    <Button
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="@color/black" />

  </com.jmedeisis.bugstick.Joystick>

</androidx.constraintlayout.widget.ConstraintLayout>
